# spacy-wrap

./: README.md  pyproject.toml
spacy_wrap/: cli.py  main.py
src/: main.py
