[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spacy-cli"
version = "0.1"
authors = [{name="Matthijs Westera", email="m.westera@hum.leidenuniv.nl"}]
description = "Very simple command-line interface for spacy."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["spacy", "spacy-fastlang", "spacy-trankit", "six"]

[project.scripts]
tokenize = "main:tokenize"
sentencize = "main:sentencize"
spacyjson = "main:spacyjson"

[project.urls]
"Homepage" = "https://github.com/mwestera/spacy-cli"
"Bug Tracker" = "https://github.com/mwestera/spacy-cli/issues"

